After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 681659 - No screenshot in non-interactive mode when xdg-user-dirs-gtk is missing
No screenshot in non-interactive mode when xdg-user-dirs-gtk is missing
Status: RESOLVED FIXED
Product: gnome-screenshot
Classification: Core
Component: general
3.4.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-screenshot-maint
gnome-screenshot-maint
Depends on:
Blocks:
 
 
Reported: 2012-08-11 17:39 UTC by Theppitak Karoonboonyanan
Modified: 2012-08-30 07:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
NULL default dir instead of file:// (756 bytes, patch)
2012-08-11 17:44 UTC, Theppitak Karoonboonyanan
accepted-commit_now Details | Review

Description Theppitak Karoonboonyanan 2012-08-11 17:39:51 UTC
As reported here:

  http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=676616

when "auto-save-directory" dconf key is not set, and "xdg-user-dirs-gtk" is not installed, non-interactive gnome-screenshot does not save any image, despite the shutter sound played.
Comment 1 Theppitak Karoonboonyanan 2012-08-11 17:44:37 UTC
Created attachment 220926 [details] [review]
NULL default dir instead of file://

> shot_dir = g_strconcat ("file://", g_get_user_special_dir (G_USER_DIRECTORY_PICTURES), NULL);

This results in "file://" when XDG_PICTURES_DIR is not set, which should be NULL instead.
Comment 2 Cosimo Cecchi 2012-08-12 13:27:16 UTC
Review of attachment 220926 [details] [review]:

Thanks, looks good.
Comment 4 Josselin Mouette 2012-08-30 07:41:25 UTC
g_strconcat, seriously?

Why not use the correct g_filename_to_uri and avoid other errors of the same kind?