Return NULL default screenshot dir on absence.

When XDG_PICTURES_DIR is not set, get_default_screenshot_dir() should return
NULL, not "file://".

https://bugzilla.gnome.org/show_bug.cgi?id=681659